@@ -25,12 +25,18 @@
 <body id="lego">
   <!-- NAVIGATION -->
   <nav>
-    <a href="https://theema-dev.github.io/highRES/"><img class="noLazyLoad" id="nav-logo-resize" src="../local/nav-logo1.webp"></a>
+    <a href="https://theema-dev.github.io/highRES/"><img class="noLazyLoad" id="nav-logo-resize" src="https://theema-dev.github.io/highRES/local/nav-logo1.webp"></a>
     <ul>
-      <li class="nav-last"><a href="#">UPLOAD</a></li>
-      <li><a href="#">COLLECTIONS</a></li>
-      <li><a href="#">ASSETS</a></li>
-      <li class="current"><a href="https://theema-dev.github.io/highRES/">GRIDS</a></li>
+      <li class="nav-last nav-dropdown">
+        <a href="javascript:void(0)" class="dropbtn">UPLOAD</a>
+        <div class="dropdown-content">
+          <a href="https://www.dropbox.com/request/vUKTvrSjgyRl8NrJM4eG" target="_blank"> GRID </a>
+          <a href="https://www.dropbox.com/request/E3NIFtjXvdJNKzCGKgbm" target="_blank"> ASSET </a>
+        </div>
+      </li>
+      <li class="current"><a href="https://theema-dev.github.io/highRES/collections">COLLECTIONS</a></li>
+      <li><a href="https://theema-dev.github.io/highRES/assets">ASSETS</a></li>
+      <li><a href="https://theema-dev.github.io/highRES/">GRIDS</a></li>
     </ul>
   </nav>
   <br><br><br><br>
