@@ -1,0 +1,70 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- META TAGS -->
+    <title>highRES - Collections</title>
+    <meta property="og:title" content="highRES - Collections" />
+    <meta property="og:description" content="highRES is an archive project for storing high resolution game assets. Download grids and customize your Steam Library. Currently hosting 2 collections!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="highRES" />
+    <meta property="og:url" content="https://theema-dev.github.io/highRES/" />
+    <meta property="og:image" content="https://theema-dev.github.io/highRES/local/se-presence.jpg" />
+    <meta name="theme-color" content="#df003f">
+    <meta name="robots" content="index">
+    <meta name="author" content="theEMA">
+    <meta property='twitter:card' content="summary_large_image" />
+    <meta name="twitter:image" content="https://theema-dev.github.io/highRES/local/se-presence.jpg" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- RELATIONS -->
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <!-- SCRIPTS -->
+    <script defer src="app.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176765401-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-176765401-1');
+    </script>
+    <!-- END OF HEAD -->
+  </head>
+  <body>
+    <!-- NAVIGATION -->
+    <nav>
+      <a href="https://theema-dev.github.io/highRES/"><img class="noLazyLoad" id="nav-logo-resize" src="https://theema-dev.github.io/highRES/local/nav-logo1.webp"></a>
+      <ul>
+        <li class="nav-last nav-dropdown">
+          <a href="javascript:void(0)" class="dropbtn">UPLOAD</a>
+          <div class="dropdown-content">
+            <a href="https://www.dropbox.com/request/vUKTvrSjgyRl8NrJM4eG" target="_blank"> GRID </a>
+            <a href="https://www.dropbox.com/request/E3NIFtjXvdJNKzCGKgbm" target="_blank"> ASSET </a>
+          </div>
+        </li>
+        <li class="current"><a href="https://theema-dev.github.io/highRES/collections">COLLECTIONS</a></li>
+        <li><a href="https://theema-dev.github.io/highRES/assets">ASSETS</a></li>
+        <li><a href="https://theema-dev.github.io/highRES/">GRIDS</a></li>
+      </ul>
+    </nav>
+    <br><br><br><br>
+    <!-- GRID START -->
+    <div class="row">
+      <div class="collection-col"><a href="collection/software" title="SOFTWARE COLLECTION (2020)"><img id="shown" data-lazy="local/se-softwarecol.jpg" alt="SOFTWARE COLLECTION (2020)"></a></div>
+      <div class="collection-col"><a href="collection/lego" title="LEGO COLLECTION (2020)"><img id="shown" data-lazy="local/se-legocol.jpg" alt="LEGO COLLECTION (2020)"></a></div>
+    </div>
+    <div class="footer">
+      <div class="left">
+        <h1>highRES Project</h1>
+        <p>highRES is an archive project for storing high resolution game assets.<br><br>Please contact me from this <a href="mailto:mstfemirkynr@pm.me?subject=Copyright%20or%20legal%20issues">email</a> for any legal or copyright issues.<br><br>highRES is not affiliated with Valve Corporation, Steam or another company/platform. <br><br>Currently hosting <span id="gridCount"></span> grids and <span id="materialCount"></span> hi-res game materials! - <a href="local/changelog.txt" id="websiteVersion"></a></p>
+      </div>
+      <div class="right">
+        <a href="https://www.steamgriddb.com/profile/76561198165563784" rel="nofollow"><img class="noLazyLoad" id="imgresize" src="local/footer-logo.png" alt=""></a>
+      </div>
+    </div>
+    <script src="local/splashIntro.js"></script>
+    <script src="local/script/variable.js"></script>
+  </body>
+</html>
